# fs.jakub.app

./: .gitignore  Cargo.toml  Dockerfile  README.md  schema.sql  tailwind.config.js
frątend/: package-lock.json  package.json  tailwind.config.ts
frątend/app/: globals.css  layout.tsx  page.tsx
frątend/app/[hash]/: page.tsx
frątend/sections/file/: file-api.ts  file-view.tsx
frątend/types/: file.ts
frątend/utils/: axios.ts
src/: error.rs  handler.rs  main.rs  misc.rs  model.rs  route.rs
src/components/: meta.rs
src/file/: mod.rs
src/views/: mod.rs  root.rs  upload.rs
